# open_manip

./: CMakeLists.txt  README.md  kinect driver installation
include/: open_manipulator_teleop_gui.h  open_manipulator_teleop_joystick_few.h  open_manipulator_teleop_keyboard_few.h
launch/: open_manipulator_teleop_gui.launch  open_manipulator_teleop_joystick_few.launch  open_manipulator_teleop_keyboard_few.launch
msg/: coordinates.msg  uvcoords.msg
my_depth_data/: data_test.py  get_depth_data.py  uv2XYZ_complete.py
src/: open_manipulator_teleop_gui.cpp  open_manipulator_teleop_joystick_few.cpp  open_manipulator_teleop_keyboard_few.cpp
wx_gui/: CMakeLists.txt  package.xml
wx_gui/msg/: coordinates.msg
wx_gui/src/: first_code.py  gui.py  order.py
